# exif-date-setter

./: README.md  progress.json  pyproject.toml
exif_setter/: args.py  cli.py  utils.py
tests/: __init__.py
